fix showing up and down vertical scrollbar on private page

--- a/rka-reddit/src/main/resources/static/css/img_upload.css
+++ b/rka-reddit/src/main/resources/static/css/img_upload.css
@@ -1,3 +1,6 @@
+body {
+  overflow-y: scroll;
+}
 #drop-area {
   border: 2px dashed #ccc;
   border-radius: 20px;
